--- a/styles/bio.css
+++ b/styles/bio.css
@@ -226,7 +226,7 @@ form{
   display: flex;
   flex-direction: column;
   padding-top: 1em;
-  gap: 0.5em;
+  gap: 1rem;
 }
 form label{
   color: rgba(50, 50, 50, 0.5);
@@ -259,7 +259,8 @@ form button{
 .profile-image{
   border-radius: 50%;
   object-fit: cover;
-  width: 20%;
+  width: 40px;
+  height:40px;
 }
 .input__container{
   display: flex;
@@ -267,11 +268,58 @@ form button{
   gap: 0.75rem;
   width: 100%;
 }
+
+.comment-box{
+  display:flex;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 1rem;
+}
+.comment-box .profile-image{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.comment-content{
+  flex: 1;
+}
+
+.comment-name{
+  font-weight: bold;
+  font-size: 1rem;
+  color: black;
+}
+
+.comment-timestamp{
+  font-size: 0.85rem;
+  color: #888;
+  margin-bottom: 0.5rem;
+}
+.comment-text{
+  font-size: 1rem;
+  line-height: 1.5rem;
+  color: black;
+}
+.comment-header{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .comment-fields{
   flex: 1;
   display: flex;
   flex-direction: column;
   width: 80%;
+  gap:0.5rem;
+}
+
+.footer__copyright{
+  padding-top: 1em;
 }
 @media (min-width: 768px) {
   .header__nav {
